--- a/style.css
+++ b/style.css
@@ -7,3 +7,9 @@ ul {text-align: center;}
 #html {font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif}
 
 #css {font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif}
+.coco  {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+}
